--- a/package.json
+++ b/package.json
@@ -3,7 +3,40 @@
   "version": "1.0.0",
   "description": "In a prescient move, the city of St. Himark released a new damage reporting mobile application shortly before the earthquake. This app allows citizens to provide more timely information to the city to help them understand damage and prioritize their response. In this mini-challenge, use app responses in conjunction with shake maps of the earthquake strength to identify areas of concern and advise emergency planners.",
   "main": "server.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js",
+    "fmt": "prettier --write '*.{jsx,js}'"
+  },
+  "prettier": {
+    "trailingComma": "all",
+    "semi": false,
+    "singleQuote": true,
+    "arrowParens": "always",
+    "jsxSingleQuote": true
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.{js,jsx,json,css,md}": [
+      "yarn fmt",
+      "git add"
+    ]
+  },
   "repository": "https://github.com/joshuaj1397/VAST-MINI-Challenge-1",
   "author": "Joshua Johnson <joshuaj1397@gmail.com>",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "csv-parser": "^2.2.0",
+    "csv-write-stream": "^2.0.0",
+    "express": "^4.16.4",
+    "husky": "^2.2.0",
+    "json2csv": "^4.5.0",
+    "lint-staged": "^8.1.5",
+    "prettier": "^1.17.0",
+    "tedious": "^5.0.3"
+  }
 }
