--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "husky": "^2.2.0",
     "json2csv": "^4.5.0",
     "lint-staged": "^8.1.5",
+    "mongoose": "^5.5.5",
     "prettier": "^1.17.0",
     "tedious": "^5.0.3"
   }
